# dst-turkce-yama

./: .gitignore  CLAUDE.md  PROGRESS.md  README.md  modinfo.lua  modmain.lua
art/: README.md
art/modicon/: .gitkeep
art/workshop/screenshots/: .gitkeep
docs/: character-voices.md  glossary.tsv  style-guide.md  workshop_description_tr.md
languages/: turkish.po
pipeline/: batch_pot.py  extract_pot.py  merge_translations.py  pyproject.toml  qa_format_strings.py  qa_typography.py  qa_ui_length.py  validate_po.py
