[project]
name = "dst-tr-pipeline"
version = "0.1.0"
description = "Don't Starve Together Türkçe Yama — çeviri pipeline araçları"
requires-python = ">=3.11"
dependencies = [
    "polib>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
